--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 sudo: required
-
 services:
   - docker
-
-language: go
-
+language: python
 python:
   - '3.5'
-
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
-
 after_success:
   - docker login -e $DOCKER_EMAIL -p $DOCKER_PASS
   - export REPO=cookkkie/mee6
