--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ python:
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
-after_success:
+before_install:
   - docker login -e $DOCKER_EMAIL -p $DOCKER_PASS
   - export REPO=cookkkie/mee6
   - docker build -f Dockerfile -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:latest
+script:
+  - echo "Ok"
+after_success:
   - docker push $REPO
