--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
 before_install:
-  - docker login -e $DOCKER_EMAIL -p $DOCKER_PASS
+  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASS
   - export REPO=cookkkie/mee6
   - docker build -f Dockerfile -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:latest
